# C2-Educational-Steganography

./: .gitignore  LICENSE  README.md  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: Dockerfile  main.py  railway.json  requirements.txt
api/routes/: embed.py  extract.py
api/services/: embed_service.py  extract_service.py
c2_server/: server.py
c2_server/database/: db_manager.py
c2_server/static/: style.css
c2_server/templates/: agents.html  agents.js  c2_server_main.js  index.html
frontend/: package-lock.json  package.json
frontend/website-c2/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/website-c2/src/: index.css
frontend/website-c2/src/components/: Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Start.tsx  SteganographyPanel.tsx
frontend/website-c2/src/components/ui/: copyCommand.tsx  tooltip.tsx
frontend/website-c2/src/pages/: NotFound.tsx  index.tsx
payload_encoder/: decoder.py  encoder.py  utils.py
payload_encoder/images/: image_path.py
payload_encoder/output/: embed_payload.py  extract_payload_img.py
shared/: common_crypto.py  common_protocol.py  protocol_secure.py
